# so-gpt4

./: .gitignore  data_test.py  database.py  main.py  pair.py  pairs.json  post.py  pyproject.toml  sample.json  webserver.py
old/: main.py  webserver.py
old/so_gpt4/: __init__.py  post.py
old/templates/: first_page.html  survey_page.html
so_gpt4/: config.py  pair.py  post.py  read_data.py
templates/: base.html  consent_form.html  index.html  language_selection.html  no_consent.html  survey.html
